# newton-scope

./: .gitignore  Cargo.toml  LICENSE-APACHE  Makefile
.github/workflows/: release.yml
docker/: Dockerfile
docs/: design_specification.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: btm.rs  calculate.rs  fractal.rs  lib.rs
src-tauri/src/multi_precision/: dashu.rs  f128.rs  mod.rs  twofloat.rs
src-tauri/src/special_function/: gamma.rs  mod.rs
src/css/: main.css
src/glsl/: fragment.glsl  vertex.glsl
src/js/: main.js  shader.js  ui.js
