[package]
name = "newton-scope"
version = "0.1.0"
description = "Newton Fractal Zoom App that operates on any formula"
authors = ["KATOI4423 <katoi4423@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KATOI4423/newton-scope.git"
edition = "2024"
rust-version = "1.90.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.1" }
tauri-plugin-log = "2.7.1"
tauri-plugin-dialog = "2.4.2"
image = "0.25.8"
base64 = "0.22.1"
formulac = "0.5.2"
num-complex = "0.4.6"
once_cell = "1.21.3"
num-traits = "0.2.19"
rayon = "1.11.0"
