[package]
name = "newton-scope"
version = "0.2.0"
description = "Newton Fractal Zoom App that operates on any formula"
authors = ["KATOI4423 <katoi4423@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KATOI4423/newton-scope.git"
edition = "2024"
rust-version = "1.90.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
bitvec = { version = "1.0.1" }
dashu = "0.4.2"
dashu-base = "0.4.1"
dashu-float = { version = "0.4.3", features = ["serde", "num-traits_v02"] }
formulac = "0.8.0"
log = "0.4.29"
num-complex = { version = "0.4.6", features = ["serde"] }
num-traits = "0.2.19"
once_cell = "1.21.4"
png = { version = "0.18.1" }
rayon = "1.12.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tauri = { version = "2.10.3" }
tauri-plugin-dialog = "2.7.0"
tauri-plugin-fs = "2.5.0"
tauri-plugin-log = "2.8.0"
